--- a/tool/鼠标手势.html
+++ b/tool/鼠标手势.html
@@ -35,6 +35,7 @@
 			$("body").append(`<canvas id='xcanvas' height="z-index:999999;${window.outerHeight}" width="${window.outerWidth}" style='height: ${window.outerHeight+"px"};width: ${window.outerWidth+"px"};background: transparent;position: fixed;left:0;top:0'></canvas>`)
 			ctx = $("#xcanvas")[0].getContext("2d");
 			ctx.lineWidth = 5
+			ctx.strokeStyle = "#000000"
 		}
 	})
 	$("body").on("mouseup",(e)=>{
